--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,5 +4,5 @@ layout: default
 <div class="post">
     <h2>{{ page.title }}</h2>
     <div>{{ content }}</div>
-    <div>Posted on {{ page.date }}</div>
+    <div>Posted on {{ page.date | date_to_long_string }}</div>
 </div>
