--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,8 @@
 <body>
 <div class="wrapper">
     <header>
-        <h1 class="header">ReeLin's Blog</h1>
-        <p class="header">myBlog</p>
+        <h1 class="header">喵呜</h1>
+        <p class="header">Reelin's blog</p>
 
         <ul>
             <li class="download"><a class="buttons" href="https://github.com/reelin/blog/zipball/master">Download ZIP</a></li>
