--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,38 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Play Cat</title>
 
-    <link rel="stylesheet" href="/stylesheets/styles.css">
-    <link rel="stylesheet" href="/stylesheets/pygment_trac.css">
+    <link rel="stylesheet" type="text/less" href="/stylesheets/styles.less">
+    
+    <meta name="viewport" post="width=device-width, initial-scale=1, user-scalable=no">
     <script src="/javascripts/scale.fix.js"></script>
+    <script type="text/javascript" src="/javascripts/jquery-1.7.2.min.js"></script>
+    <script src="/javascripts/less-1.3.0.min.js" type="text/javascript"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 </head>
-<body>
-<div class="wrapper">
-    <header>
-        <h1 class="header">喵呜呜</h1>
-        <p class="header">I like green</p>
 
+<body>
+    <header>
         <ul>
-            <li class="download"><a class="buttons" href="https://github.com/reelin/blog/zipball/master">Download ZIP</a></li>
-            <li class="download"><a class="buttons" href="https://github.com/reelin/blog/tarball/master">Download TAR</a></li>
-            <li><a class="buttons github" href="https://github.com/reelin/blog">View On GitHub</a></li>
+            <li><a id="logo">喵呜呜</a></li>
+            <li>
+                <a href="/index.html">Blog</a>
+            </li>
+            <li>
+                <a href="/exercise.html">Exercises</a>
+            </li>
+            <li>
+                <a href="/demo.html">Demo</a>
+            </li>
+            <li>
+                <a href="reelin.html">About</a>
+            </li>
         </ul>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/reelin">reelin</a></p>
-
-
     </header>
-    <section>
-        {{content}}
-    </section>
-    <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-    </footer>
-</div>
+    <div class="wrapper">        
+
+        {{ content }}
+        
+        <footer>
+            <p>Hosted on GitHub Pages — Theme by <a class="header name" href="https://github.com/reelin">reelin</a></p>
+        </footer>
+    </div>
+
+<script type="text/javascript" src="/javascripts/base.js"></script>
+
 <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-	
 </body>
 </html>
