--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <div id="github">
     <h2>{{ page.title }}</h2>
-    <div class="blog-content">
+    <div class="content">
     	<div>{{ content }}</div>
     	<p class="data">Posted on {{ page.date | date_to_long_string }}</p>
     </div>
