--- a/stylesheets/styles.less
+++ b/stylesheets/styles.less
@@ -11,7 +11,6 @@ body {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 15px;
 	color: #333;
-	line-height: 18px;
 	background: #fff;
 }
 
@@ -172,6 +171,7 @@ footer {
 		border: 1px solid #eee;
 		border-radius: 5px;
 		box-shadow: 0px 0px 4px #e5e5e5;
+		line-height: 1.6;
 		
 		.data {
 			font-size: 14px;
