--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Play Cat</title>
+    <title>MiaoWuwu | I Like Green</title>
 
     <link rel="stylesheet" type="text/less" href="/stylesheets/styles.less">
     
     <meta name="viewport" post="width=device-width, initial-scale=1, user-scalable=no">
+    
     <script src="/javascripts/scale.fix.js"></script>
     <script type="text/javascript" src="/javascripts/jquery-1.7.2.min.js"></script>
     <script src="/javascripts/less-1.3.0.min.js" type="text/javascript"></script>
@@ -20,15 +21,12 @@
 <body>
     <header>
         <ul>
-            <li><a id="logo">喵呜呜</a></li>
+            <li><a id="logo" href="/">喵呜呜</a></li>
             <li>
                 <a href="/index.html">Blog</a>
             </li>
             <li>
-                <a href="#">Exercises</a>
-            </li>
-            <li>
-                <a href="/demo.html">Demo</a>
+                <a href="/demo.html">Demos</a>
             </li>
             <li>
                 <a href="#">About</a>
