--- a/stylesheets/styles.less
+++ b/stylesheets/styles.less
@@ -163,11 +163,13 @@ footer {
 		margin-bottom: 20px;
 		color: #567292; 
 	}
-
-	h2 { font-size: 20px; }
 	
 	.content {
 		.github-style ();
+		h2 { 
+			font-size: 20px;
+			position: static;
+		}
 		padding: 10px 30px;
 		border: 1px solid #eee;
 		border-radius: 5px;
