--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
                 <a href="/demo.html">Demos</a>
             </li>
             <li>
-                <a href="#">About</a>
+                <a href="/about_me.html">About</a>
             </li>
         </ul>
 
